<resources>
    <string name="app_name">Android.Homework2</string>
    <string name="minus">−</string>
    <string name="comma">,</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="add">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mult">×</string>
    <string name="div">÷</string>
    <string name="perc">%</string>
    <string name="ac">AC</string>
    <string name="backspace">⌫</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="equally">=</string>
    <string name="CD_BGImage_skull">skull</string>
    <string name="default_style">Default style</string>
    <string name="light_style">Light Style</string>
    <string name="dark_style">Dark Style</string>
</resources>